# project-B

./: CMakeLists.txt  Main.qml  link.cpp  link.h  main.cpp  mainwindow.cpp  mainwindow.h  opencvimageprovider.cpp  opencvimageprovider.h  videostreamer.cpp  videostreamer.h
